Bug 1211805 - rework keyboard detection for on-screen keyboard, r=jaws, a=lizzard